clusters/cl01tl/manifests/yamtrack/HTTPRoute-yamtrack.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yamtrack
  labels:
    app.kubernetes.io/instance: yamtrack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: yamtrack
    helm.sh/chart: yamtrack-5.3.0
  annotations:
    gethomepage.dev/description: Yamtrack
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Background
    gethomepage.dev/icon: sh-yamtrack.webp
    gethomepage.dev/name: Media Tracking
    gethomepage.dev/siteMonitor: http://yamtrack.yamtrack:80
    gethomepage.dev/statusStyle: dot
    gethomepage.dev/weight: "360"
  namespace: yamtrack
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "yamtrack.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: yamtrack
          namespace: yamtrack
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
